# bump-standalone

./: .gitattributes  .gitignore  CLOC_REPORT.dox  CMakeLists.txt  ENV_ECMWF.dox  ENV_MF.dox  ENV_NCAR.dox  LICENCE_MF.dox  LICENSE  LICENSE_MF.dox  MF_LICENCE.dox  MF_LICENSE.dox  README.dox  README.md  README_NCAR.dox  build_bump-standalone.sh  install_bump-standalone.ksh  install_bump-standalone.sh
data/gem/: links.ksh  links_sc.ksh
data/geos/: links.ksh
data/gfs/: links.ksh
data/ifs/: links.ksh
data/mpas/: links.ksh
data/nemo/: links.ksh
data/wrf/: links.ksh
doc/: CLOC_REPORT.dox  CLOC_REPORT.md  Doxyfile  ENV_ECMWF.dox  ENV_ECMWF.md  ENV_MF.dox  ENV_MF.md  ENV_NCAR.dox  ENV_NCAR.md  LICENCE.dox  LICENCE.md  LICENSE.dox  LICENSE.md  README.md  adding_a_new_model.md  code_architecture.md  code_autodoc.md  code_list.md  code_structure.md  compilation_and_dependencies.md  folders_organization.md  input_data.md  mainpage.h  namelist_management.md  ncl_plots.md  offline_or_online_usage.md  running_the_code.md  standalone_or_online_usage.md  test.md  wiki
doc/autodoc/: fckit_configuration_module.md  fckit_geometry_module.md  fckit_kdtree_module.md  fckit_log_module.md  fckit_mpi_module.md  model_interface.md  module_aro.md  module_arp.md  module_fv3.md  module_gem.md  module_geos.md  module_gfs.md  module_ifs.md  module_mpas.md  module_nemo.md  module_res.md  module_wrf.md  tools_asa007.md  tools_fit.md  tools_func.md  tools_kdtree2.md  tools_kdtree2_pq.md  tools_missing.md  tools_nc.md  tools_qsort.md  tools_repro.md  tools_stripack.md  tools_test.md  type_adv.md  type_avg.md  type_avg_blk.md  type_bpar.md  type_bump.md  type_cmat.md  type_cmat_blk.md  type_com.md  type_cv.md  type_diag.md  type_diag_blk.md  type_displ.md  (+27 more)
metis/: CMakeLists.txt  README.md
metis/src/: CMakeLists.txt
metis/src/gklib/: CMakeLists.txt  GKlib.h  b64.c  blas.c  csr.c  error.c  evaluate.c  fkvkselect.c  fs.c  getopt.c  gkregex.c  graph.c  htable.c  io.c  itemsets.c  mcore.c  memory.c  omp.c  pdb.c  pqueue.c  random.c  rw.c  seq.c  sort.c  string.c  timers.c  tokenizer.c  util.c
metis/src/metis/: CMakeLists.txt  auxapi.c  balance.c  bucketsort.c  checkgraph.c  coarsen.c  compress.c  contig.c  debug.c  fm.c  fortran.c  frename.c  gklib.c  graph.c  initpart.c  kmetis.c  kwayfm.c  kwayrefine.c  mcutil.c  mesh.c  meshpart.c  metislib.h  minconn.c  mincover.c  mmd.c  ometis.c  options.c  parmetis.c  pmetis.c  refine.c  separator.c  sfm.c  srefine.c  stat.c  timing.c  util.c  wspace.c
metis/src/metis_interface/: CMakeLists.txt  metis_interface.f90
ncl/script/: diagnostics_bdata.ncl  diagnostics_cmat.ncl  diagnostics_diag.ncl  diagnostics_dirac.ncl  diagnostics_displ.ncl  diagnostics_distribution.ncl  diagnostics_hdiag_sampling.ncl  diagnostics_lct.ncl  diagnostics_mpi_1.ncl  diagnostics_mpi_2.ncl  diagnostics_nicas_dirac.ncl  diagnostics_nicas_dirac_displ.ncl  diagnostics_nicas_mpi.ncl  diagnostics_nicas_mpi_summary.ncl  dirac.ncl
offline/: bump_run_offline.F90  bump_setup_offline.F90  ens_load.F90  fckit_mpi_module.F90  main.F90  type_fckit_mpi_comm.F90  type_timer.F90
offline/fckit/: fckit_geometry_module.F90  fckit_mpi_module.F90
offline/model/: model_aro.F90  model_arp.F90  model_fv3.F90  model_gem.F90  model_geos.F90  model_gfs.F90  model_ifs.F90  model_interface.F90  model_mpas.F90  model_nemo.F90  model_res.F90  model_wrf.F90
run/: bump.out.0000  bump.out.0001  namelist_aro_5840  namelist_aro_7G0N  namelist_aro_7H8H_sc  namelist_aro_hyd  namelist_arp_6B60  namelist_arp_6B8O_bull  namelist_arp_86SV_sc  namelist_arp_877D  namelist_arp_877D_sc  namelist_arp_obsop_random  namelist_arp_obsop_sat  namelist_default  namelist_fv3  namelist_gem  namelist_geos  namelist_geos_cortrack  namelist_gfs  namelist_ifs  namelist_mpas  namelist_nemo  namelist_nemo_cera-20c  namelist_nemo_nemovar  namelist_nemo_nemovar_lct  namelist_nemo_nemovar_nicas  namelist_oops_6BKV  namelist_oops_87BL  namelist_oops_arp  namelist_oops_qg  namelist_res  namelist_test  namelist_truth  namelist_wrf  namelist_wrf_tq10  namelist_wrf_wrfda  nicas  nicas.out.0001  nicas.out.0002  nicas.out.0003  (+4 more)
saber/: CMakeLists.txt  VERSION.cmake
saber/doc/: CMakeLists.txt  overview.md
script/: architecture.ksh  autodoc.ksh  callgraph.ksh  clean.ksh  cloc_report.ksh  copy.ksh  copy_to_oops.ksh  gendoc.ksh  indices.ksh  links.ksh  lsf.ksh  namelist.sqlite  namelist.sqlite_old  namelist_nam2sql.ksh  namelist_nam2sql.sh  namelist_sql2json.ksh  namelist_sql2nam.ksh  namelist_sql2nam.sh  offline.ksh  pack.ksh  pbs.ksh  run_ECMWF.ksh  run_MF.ksh  run_NCAR.ksh  sbatch.ksh  standalone.ksh  test.ksh  update.ksh
src/: driver_hdiag.f90  driver_lct.f90  driver_nicas.f90  driver_obsgen.f90  driver_obsop.f90  driver_test.f90  fckit_mpi_module.F90  hdiag_average.f90  hdiag_displacement.f90  hdiag_dualens.f90  hdiag_fit.f90  hdiag_fit_lct.f90  hdiag_hybridization.f90  hdiag_lct.f90  hdiag_localization.f90  hdiag_moments.f90  hdiag_mpi.f90  hdiag_sampling.f90  hdiag_tools.f90  main.F90  main.f90  model_aro.F90  model_aro.f90  model_arp.F90  model_arp.f90  model_gem.F90  model_gem.f90  model_geos.F90  model_geos.f90  model_gfs.F90  model_gfs.f90  model_ifs.F90  model_ifs.f90  model_interface.f90  model_mpas.F90  model_mpas.f90  model_nemo.F90  model_nemo.f90  model_offline.f90  model_online.f90  (+133 more)
src/model/: model_aro.F90  (+16 more)
standalone/: main.F90  type_model.F90
test/: ens1_00_0001.nc  ens1_00_0002.nc  ens1_00_0003.nc  ens1_00_0004.nc  ens1_00_0005.nc  ens1_00_0006.nc  ens1_00_0007.nc  ens1_00_0008.nc  ens1_00_0009.nc  ens1_00_0010.nc  ens1_00_0011.nc  ens1_00_0012.nc  ens1_00_0013.nc  ens1_00_0014.nc  ens1_00_0015.nc  ens1_00_0016.nc  ens1_00_0017.nc  ens1_00_0018.nc  ens1_00_0019.nc  ens1_00_0020.nc  ens1_00_0021.nc  ens1_00_0022.nc  ens1_00_0023.nc  ens1_00_0024.nc  ens1_00_0025.nc  ens1_00_0026.nc  ens1_00_0027.nc  ens1_00_0028.nc  ens1_00_0029.nc  ens1_00_0030.nc  ens1_00_0031.nc  ens1_00_0032.nc  ens1_00_0033.nc  ens1_00_0034.nc  ens1_00_0035.nc  ens1_00_0036.nc  ens1_00_0037.nc  ens1_00_0038.nc  ens1_00_0039.nc  ens1_00_0040.nc  (+158 more)
(+79 files in other folders)
